--- a/1-libft-a/libft/Makefile
+++ b/1-libft-a/libft/Makefile
@@ -29,7 +29,8 @@ SRC = ft_isalpha.c \
 						ft_atoi.c \
 						ft_calloc.c \
 						ft_strdup.c \
-						ft_strjoin.c
+						ft_strjoin.c \
+						ft_itoa.c
 
 #BONUSSRC = 
 
