--- a/1-libft-a/libft/Makefile
+++ b/1-libft-a/libft/Makefile
@@ -31,7 +31,10 @@ SRC = ft_isalpha.c \
 						ft_strdup.c \
 						ft_substr.c \
 						ft_strjoin.c \
-						ft_itoa.c
+						ft_itoa.c \
+						ft_strmapi.c \
+						ft_striteri.c \
+						ft_putchar_fd.c
 
 #BONUSSRC = 
 
