--- a/1-libft-a/libft/Makefile
+++ b/1-libft-a/libft/Makefile
@@ -33,8 +33,8 @@ SRC = ft_isalpha.c \
 						ft_strjoin.c \
 						ft_itoa.c \
 						ft_strmapi.c \
-						ft_striteri.c \
-						ft_putchar_fd.c
+						ft_striteri.c
+
 
 #BONUSSRC = 
 
