--- a/1-libft-a/libft/Makefile
+++ b/1-libft-a/libft/Makefile
@@ -31,6 +31,7 @@ SRC = ft_isalpha.c \
 						ft_strdup.c \
 						ft_substr.c \
 						ft_strjoin.c \
+						ft_split.c \
 						ft_itoa.c \
 						ft_strmapi.c \
 						ft_striteri.c
