--- a/1-libft-a/libft/Makefile
+++ b/1-libft-a/libft/Makefile
@@ -46,7 +46,8 @@ INCLUDE = libft.h
 BONUS_SOURCES = ft_lstnew_bonus.c \
 						ft_lstsize_bonus.c \
 						ft_lstadd_front_bonus.c \
-						ft_lstlast_bonus.c
+						ft_lstlast_bonus.c \
+						ft_lstadd_back_bonus.c
 
 BONUS_OBJECTS = $(BONUS_SOURCES:.c=.o)
 
